fix on safari

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -568,10 +568,10 @@ textarea::placeholder {
   }
 
   .section-regular,
-  /* .heroSection {
+  .heroSection {
     width: 90%;
 
-  } */
+  }
 
   h1 {
     font-size: var(--text-5xl);
